# qt-remote

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  main.qml
qt_remote_client/: main.qml  qt_remote_client.pro
qt_remote_server/: qt_remote_server.pro
server/: CMakeLists.txt  main.cpp  simpleswitch.cpp  simpleswitch.h  simpleswitch.rep
